<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Fasteignir</string>
    <string name="refresh">Refresh</string>
    <string name="filter">Filter</string>
    <string name="search_criteria">Leitar sía</string>
    <string name="save_search_criteria">Vista síu</string>
    <string name="location">Staðsetning</string>
    <string name="priceFrom">Verð frá:</string>
    <string name="priceTo">Verð til:</string>
    <string name="realtyType">Tegund</string>
    <string name="lowerRoom">Herbergi frá:</string>
    <string name="upperRoom">Herbergi til:</string>
    <string name="no_internet">Verður að tengjast neti til að sjá fasteignir.</string>
    <string name="no_data">Fann engar fasteignir. Prufaðu að útvíkka leitarskilyrðin.</string>
    <string name="price_information">Verð upplýsingar</string>
    <string name="price">Verð:</string>
    <string name="assesment">Fasteignamat:</string>
    <string name="fire_insurance">Brunabótamat:</string>
    <string name="description">Lýsing</string>
    <string name="extra_information">Nánari upplýsingar</string>
    <string name="maps">Maps</string>

</resources>
