<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <item android:id="@+id/action_refresh"
        android:title="@string/refresh"
        android:icon="@drawable/ic_action_refresh"
        android:orderInCategory="100"
        app:showAsAction="ifRoom" />

    <item android:id="@+id/action_filter"
        android:title="@string/filter"
        android:icon="@drawable/ic_action_filter"
        android:orderInCategory="200"
        app:showAsAction="ifRoom" />

    <item android:id="@+id/action_maps"
        android:title="@string/maps"
        android:icon="@drawable/ic_action_place_white"
        android:orderInCategory="300"
        app:showAsAction="ifRoom" />
</menu>
