<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/HeaderStyle"
        android:textSize="20sp"
        android:text="@string/search_criteria"
        android:gravity="center"
        android:paddingTop="5sp"
        android:paddingBottom="5sp"
        android:background="@color/base_color"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/location"
        android:typeface="serif"
        android:textSize="20sp"
        android:paddingBottom="10sp"/>

    <include layout="@layout/splitter" />

    <is.arnar.realty.ui.MultiSelectSpinner
        android:id="@+id/multiSelect"
        android:layout_width="match_parent"
        android:layout_height="50sp"
        android:background="#fff"
        />
    
    <Button
        android:id="@+id/save_filter"
        android:layout_width="match_parent"
        android:layout_height="50sp"
        android:background="@drawable/button_selector"
        android:text="@string/save_search_criteria"
        android:textColor="@color/background_color"
        android:typeface="serif"
        android:textSize="18sp"/>

</LinearLayout>