<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:id="@+id/main_scrollview"
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_height="match_parent"
     android:layout_width="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <android.support.v4.view.ViewPager
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/imageViewPager"
            android:layout_width="fill_parent"
            android:layout_height="270sp"/>

        <TextView
            android:id="@+id/realtyName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10sp"
            android:layout_marginBottom="10sp"
            android:text="Hamratún 30"
            style="@style/RealtyHeader"
            android:textSize="30sp"
            />

        <TextView
            android:id="@+id/realtyLocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Reykjavík, 101"
            android:drawableLeft="@drawable/ic_action_place"
            style="@style/ProfileAboutStyle"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/price_information"
            android:layout_marginTop="10sp"
            android:drawableLeft="@drawable/ic_action_about"
            style="@style/ProfileAboutStyle"/>

        <TextView
            android:id="@+id/realtyPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/price"
            android:layout_marginTop="10sp"
            android:layout_marginLeft="40sp"
            style="@style/ProfileAboutStyle"/>

        <TextView
            android:id="@+id/realtyAssessmentValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/assesment"
            android:layout_marginTop="10sp"
            android:layout_marginLeft="40sp"
            style="@style/ProfileAboutStyle"/>

        <TextView
            android:id="@+id/realtyFireInsuranceValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fire_insurance"
            android:layout_marginTop="10sp"
            android:layout_marginLeft="40sp"
            style="@style/ProfileAboutStyle"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/description"
            android:layout_marginTop="10sp"
            android:drawableLeft="@drawable/ic_action_view_as_list"
            style="@style/ProfileAboutStyle"/>

        <TextView
            android:id="@+id/realtyDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10sp"
            android:layout_marginLeft="40sp"
            android:paddingLeft="20sp"
            android:paddingRight="20sp"
            android:lineSpacingMultiplier="1.3"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/location"
            android:layout_marginTop="10sp"
            android:drawableLeft="@drawable/ic_action_place"
            style="@style/ProfileAboutStyle"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <fragment
                android:id="@+id/map"
                class="com.google.android.gms.maps.MapFragment"
                android:layout_width="match_parent"
                android:layout_height="250sp"
                android:layout_marginTop="10sp"
                android:layout_marginBottom="10sp"
                />

            <ImageView
                android:id="@+id/transparent_image"
                android:layout_width="match_parent"
                android:layout_height="250sp"
                android:background="@color/transparent"
                android:focusable="true"
                android:focusableInTouchMode="true"/>

            </RelativeLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/extra_information"
            android:layout_marginTop="10sp"
            android:drawableLeft="@drawable/ic_action_storage"
            style="@style/ProfileAboutStyle"/>

        <TextView
            android:id="@+id/realtyProperties"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10sp"
            android:layout_marginTop="10sp"
            android:layout_marginLeft="40sp"
            android:paddingLeft="20sp"
            android:paddingRight="20sp"
            android:lineSpacingMultiplier="1.3"/>

        <include layout="@layout/splitter" />

        <TextView
            android:id="@+id/realtorName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10sp"
            android:layout_marginBottom="10sp"
            android:text="Remax"
            style="@style/RealtyHeader"
            android:textSize="30sp"
            />

        <TextView
            android:id="@+id/realtorPhoneNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_action_phone"
            style="@style/ProfileAboutStyle"/>

        <TextView
            android:id="@+id/realtorEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_action_email"
            style="@style/ProfileAboutStyle"/>

        <ImageView
            android:id="@+id/realtorImage"
            android:layout_width="match_parent"
            android:layout_height="140sp"
            android:scaleType="fitXY"
            android:layout_margin="10sp"/>

    </LinearLayout>

</ScrollView>